Отправка отчета в MM и поддержка Docker

--- a/MeetingGenerator/appsettings.json
+++ b/MeetingGenerator/appsettings.json
@@ -6,6 +6,7 @@
         "RedmineApiKey": "",
         "RedmineProjectId": 0,
         "ReporterName": "",
+        "MattermostUrl": "",
         "MattermostChannelId": 0,
         "MattermostAccessToken": ""
       },
@@ -14,6 +15,7 @@
         "RedmineApiKey": "",
         "RedmineProjectId": 0,
         "ReporterName": "",
+        "MattermostUrl": "",
         "MattermostChannelId": 0,
         "MattermostAccessToken": ""
       }
